# buzz

./: .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOSTR.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  justfile  lefthook.yml  pnpm-lock.yaml
.github/workflows/: auto-tag-on-release-pr-merge.yml  ci.yml  helm-chart.yml  release.yml  sprig.yml
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  lib.rs  relay.rs
crates/buzz-admin/: Cargo.toml
crates/buzz-admin/src/: main.rs
crates/buzz-agent/src/: agent.rs  builtin.rs  hints.rs
crates/buzz-agent/tests/: regressions.rs
crates/buzz-cli/src/: client.rs
crates/buzz-db/src/: event.rs
crates/buzz-dev-mcp/src/: lib.rs  shell.rs
crates/buzz-persona/: Cargo.toml
crates/buzz-workflow/: Cargo.toml
crates/git-sign-nostr/: Cargo.toml
crates/sprout-cli/: Cargo.toml
crates/sprout-dev-mcp/: Cargo.toml
crates/sprout-relay/: Cargo.toml
crates/sprout-test-client/: Cargo.toml
deploy/compose/: run.sh
desktop/: package.json  playwright.config.ts
desktop/scripts/: check-file-sizes.mjs  check-pubkey-truncation.mjs
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/: README.md
examples/countdown-bot/: README.md
examples/meadow-core/: README.md
mobile/: CHANGELOG.md  pubspec.yaml
scripts/: bundle-sidecars.sh  check-pubkey-truncation-core.mjs  cleanup-instance-agents.sh  start-relay-for-tests.sh
web/: package.json
web/scripts/: check-pubkey-truncation.mjs
(+384 files in other folders)
